# Epistasia

./: README.md  index.html  pyproject.toml
epistasia/: README.md  core.py  epistasis.py  io.py  synlands.py  walshhadamard.py
epistasia/eglobal/: algebra.py  fees.py
epistasia/epistasia/: __init__.py  fees.py  mechanistic_models.py  test.py
epistasia/epistasia/eglobal/: __init__.py  alignment.py  qinference.py
epistasia/epistasia/stats_noise/: __init__.py  batch_effect  batch_effect.stan  noise_models.py
epistasia/epistasia_web/: instrucciones_editar.txt  mkdocs.yml
epistasia/epistasia_web/docs/: index.md
epistasia/epistasia_web/docs/notebooks/: Tutorial_pag1.ipynb  Tutorial_page2.ipynb  Tutorial_page3.ipynb  Tutorial_page6.ipynb
epistasia_web/: mkdocs.yml
epistasia_web/docs/: index.md
epistasia_web/docs/notebooks/: Tutorial_page2.ipynb  Tutorial_page3.ipynb  Tutorial_page4.ipynb  Tutorial_page5.ipynb  Tutorial_page6.ipynb
epistasia_web/site/: index.html  sitemap.xml
epistasia_web/site/notebooks/Tutorial_pag1/: index.html
epistasia_web/site/notebooks/Tutorial_page2/: index.html
epistasia_web/site/notebooks/Tutorial_page4/: index.html
notebooks/Tutorial_pag1/: index.html
notebooks/Tutorial_page2/: index.html
notebooks/Tutorial_page3/: index.html
notebooks/Tutorial_page4/: index.html
notebooks/Tutorial_page5/: index.html
notebooks/Tutorial_page6/: index.html
search/: search_index.json
